tests/trybuild/cannot_call_union_on_traced_union_result.rs
use eros::{Union};



fn main() {
    let error: eros::TracedUnion = eros::traced!("Error");
    let result: Result<(), eros::TracedUnion> = Err(error);
    let _error = result.union();
}
